kubernetes/istio/01 - cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: edis-catalog
spec:
  type: ClusterIP
  selector:
    app: edis-catalog
  ports:
    - port: 80
      targetPort: 8080
